--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ h1 {
 }
 h4 {
   text-align: center;
-  margin-top: 20px;
+  margin: 10px auto;
   font-weight: 400;
 }
 
@@ -34,7 +34,7 @@ h4 {
 /*--------members----------*/
 
 .team-member {
-  box-shadow: 2px 2px 1px rgb(78, 78, 78, 20%);
+  box-shadow: 2px 2px 12px 5px rgba(0, 0, 0, 0.2);
   display: flex;
   background-color: #0f0e17;
   color: white;
